Added Moves record, getRemainingMoves(), and execute() may need more work